--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "car-for-rent",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://liussi.github.io/cars-for-rent/",
   "dependencies": {
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
