--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car-for-rent",
+  "name": "cars-for-rent",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://liussi.github.io/cars-for-rent/",
