--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "car-for-rent",
+  "name": "cars-for-rent",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://liussi.github.io/car-for-rent/",
+  "homepage": "https://liussi.github.io/cars-for-rent/",
   "dependencies": {
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
